--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build-old": "react-scripts build",
-    "build": "parcel build src/index.js --no-source-maps -d widget && cp build/static/css/*.css widget/index.css",
+    "build": "parcel build src/index.js --no-source-maps -d widget",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
